# QuadTree

./: CMakeLists.txt  CompTwoFunc.cpp  CompTwoFunc.h  Forest.cpp  Forest.h  Function.cpp  Function.h  Gaussian.cpp  Gaussian.h  GaussianQuadrature.cpp  GaussianQuadrature.h  GraphicsMechanics.cpp  GraphicsMechanics.h  LegendrePolynomial.cpp  LegendrePolynomial.h  Node.cpp  Node.h  OneDFunction.cpp  OneDFunction.h  Point.cpp  Point.h  QuadTree.cpp  QuadTree.h  Rectangle.cpp  Rectangle.h  Square.cpp  Square.h  Test2DExpFcn.cpp  Test2DExpFcn.h  TestExponentialFunction.cpp  TestExponentialFunction.h  a.out  cellCoords.csv  debug.sh  inData.csv  lol  main.cpp  outData.csv  params.txt  run.sh  (+7 more)
.VSCodeCounter/: details.md  results.csv  results.md  results.txt
